overall fixing of spacing of divs

--- a/aemedge/templates/blog-article/blog-article.css
+++ b/aemedge/templates/blog-article/blog-article.css
@@ -250,12 +250,22 @@ body.blog-article.modal-open .modal-content .section:first-of-type > div {
         margin: 20px 10px;
     }
 
-    .content-details-wrapper {
+    .blog-article main .default-content-wrapper {
+        width: 66%;
+        margin: 0 auto 0 17%;
+    }
+
+    .blog-article main .content-details-wrapper {
         width: 66%;
         margin: 0 auto 0 2%;
     }
 
-    .content-details-wrapper >.default-content-wrapper > *:first-child {
+    .blog-article main .content-details-wrapper .default-content-wrapper {
+        width: unset;
+        margin: 0;
+    }
+
+    .blog-article main .content-details-wrapper >.default-content-wrapper > *:first-child {
         margin-top: 0;
     }
 
@@ -267,6 +277,8 @@ body.blog-article.modal-open .modal-content .section:first-of-type > div {
     .blog-article > main .section:not(.blog-hero-container) {
         padding: unset;
         width: unset;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .blog-article > main .section.popular-blogs-container {
